--- a/css/styles.css
+++ b/css/styles.css
@@ -205,20 +205,45 @@ button {
   position: fixed;
   top: 0;
   background-color: #FFFFFF;
-  z-index: 999;
+  z-index: 333;
   padding: 24px 24px 40px 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
+
 .menu-clouse {
   display: block;
   margin-left: auto;
   margin-bottom: 24px;
+  border-radius: 50%;
 
+}
+
+.icon-close-black-mob{
+  color: #000000;
+  z-index: 999;
+  fill: #D9D9D9;
 }
 .mob-navig-list {
 }
-.mob-page-nav {
+.mob-page-nav:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.mob-page-nav:first-child .mob-page-nav-link {
+  color: #404BBF;
 }
 .mob-page-nav-link {
+
+font-weight: 700;
+font-size: 36px;
+line-height: 111%;
+letter-spacing: 0.02em;
+color: var(--navy-blue);
 }
 .page-nav-oen {
 }
@@ -227,8 +252,14 @@ button {
 .mob-address {
 }
 .mob-header-contact-list {
+  margin-bottom: 48px;
 }
-.address-link {
+
+.mob-page-link {
+  margin-bottom: 24px;
+}
+.mob-address-link {
+  color: #4D5AE5;
 }
 .team-icon-list {
 }
@@ -238,6 +269,17 @@ button {
 }
 .team-icon {
 }
+
+
+.mob-menu-btn {
+  display: block;
+  background-color: transparent;
+    outline: transparent;
+  resize: none;
+  color: #000000;
+}
+
+
 
 /*===============Section 1 =====================*/
 
@@ -736,7 +778,9 @@ button {
 
 .footer-container {
   display: flex;
-  align-items: baseline;
+  /* align-items: baseline; */
+  flex-wrap: wrap;
+  
 }
 
 .section-foot-text {
@@ -1038,7 +1082,7 @@ input:checked .modal-span {
   fill: #f4f4fd;
 }
 
-/*   jhjhjhjhjhjhjhjhjhjhjhjhjhjh */
+/*   ------modal-form---- */
 
 .modal-form-icon {
   position: absolute;
