--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
   background-color: #ffffff;
   font-size: 16px;
   line-height: 24px;
+  width: 320px;
 }
 
 /* Стилі для обнулення відступів у елементів */
@@ -772,12 +773,17 @@ color: var(--navy-blue);
 /*===============Footer =====================*/
 .foot {
   background: #2e2f42;
+  
+
   /* padding-top: 100px;
   padding-bottom: 100px; */
 }
 
 .footer-container {
   display: flex;
+  width: 100%;
+  max-width: 320px;
+  
   /* align-items: baseline; */
   flex-wrap: wrap;
   
@@ -790,16 +796,21 @@ color: var(--navy-blue);
   letter-spacing: 0.02em;
   color: #f4f4fd;
   margin-right: auto;
-  max-width: 264px;
+  /* max-width: 264px; */
+  max-width: 288px;
 }
 
 .logo-block {
-  margin-right: 120px;
+  padding: 96px 16px 72px 16px;
+  /* margin-right: 120px; */
 }
 
 .footer-logo-web {
+  
   margin-bottom: 16px;
   display: inline-block;
+  /* align-items: center; */
+  
 }
 
 .footer-paragraph {
@@ -814,6 +825,7 @@ color: var(--navy-blue);
 .footer-icon-block {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
 }
 .footer-icon-list {
   display: flex;
@@ -852,11 +864,16 @@ color: var(--navy-blue);
 
 /* #region modal  -------------------------------------------- */
 .subscribe-form {
-  margin-left: 80px;
+  /* margin-left: 80px; */
+  margin: 72px auto;
 }
 .footer-form {
   display: flex;
   gap: 24px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .footer-parag {
@@ -1172,8 +1189,7 @@ textarea:focus {
 
 /* -------------- Tablet ----------- */
 
-
-
+/* 
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -1184,6 +1200,37 @@ textarea:focus {
     padding: 0 15px 0 15px;
      
     max-width: 767px;
+  }
+
+  
+  .header-container-nav-adres {
+    display: flex;
+    width: 1158px;
+    width: 100%;
+    
+  }
+  .navig-list {
+    display: flex;    
+    align-items: center;
+    gap: 40px;
+  }
+
+  .header-contact-list {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    padding: 24px 0;
+    flex-direction: column;
+
+  }
+
+  .menu-open {
+    display: none;
+  }
+
+  body {
+    
+    width: 768px;
   }
 
   
@@ -1276,17 +1323,65 @@ textarea:focus {
 
    }
   
+  
+
+
+
+   
+  .foot {
+    background: #2e2f42;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .footer-container {
+    
+    align-items: baseline; 
+    
+    
+  }
+
+
+  .subscribe-form {
+    margin-left: 80px;
+    
+  }
+  .footer-form {
+    display: flex;
+    gap: 24px;
+    flex-wrap:nowrap;
+    flex-direction:row;
+
+  }
+
+  .logo-block {
+    margin-right: 120px;
+  }
+  
+  .footer-logo-web {
+    margin-bottom: 16px;
+    display: inline-block;
+  }
+
+  .backdrop {
+    
+    width: 768px;
+    height: 100%;
+    
+  }
+
 
 
 
 }
-
+ */
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
  .section-two .container{
   padding: 16px 96px;
  }
 } 
+
 
 /* ------------------ Desktop------------ */
 
@@ -1298,9 +1393,38 @@ textarea:focus {
    }
 
    .header-container {
-    
+    padding: 0 15px 0 15px;    
     width: 1158px;
     
+  }
+  .header-container-nav-adres {
+    display: flex;
+    width: 1158px;
+    width: 100%;
+    
+  }
+  .navig-list {
+    display: flex;    
+    align-items: center;
+    gap: 40px;
+  }
+
+  .header-contact-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    padding: 24px 0;
+    flex-direction: row;
+  }
+
+  .menu-open {
+    display: none;
+  }
+
+  
+  .body {
+    
+    width: 1440px;
   }
 
 
@@ -1384,7 +1508,7 @@ textarea:focus {
     margin: 0 auto;
   }
    .team {
-    gap: 24px;
+    gap: auto;
     flex-wrap: nowrap;
 
    }
@@ -1410,6 +1534,76 @@ textarea:focus {
      
     
   }
+
+
+
+  /*-------------------footer ---------------------- */
+
+
+
+
+
+  .foot {
+    background: #2e2f42;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .footer-container {
+    
+    align-items: baseline; 
+    
+    justify-content: space-around;
+    
+  }
+
+  .logo-block {
+    padding: 96px 16px 72px 16px;
+    margin-right: 120px;
+  }
+
+  .footer-logo-web {
+  
+   
+    align-items: center; 
+    
+  }
+
+
+
+
+  .subscribe-form {
+    margin-left: 80px;
+    
+  }
+  .footer-form {
+    display: flex;
+    gap: 24px;
+    flex-wrap:nowrap;
+    flex-direction:row;
+
+  }
+
+  .logo-block {
+    margin-right: 120px;
+  }
+  
+  .footer-logo-web {
+    margin-bottom: 16px;
+    display: inline-block;
+  }
+
+  .backdrop {
+    
+    width: 1440px;
+    height: 100%;
+    
+  }
+
+
+
+
+
 }
 
 
