--- a/css/styles.css
+++ b/css/styles.css
@@ -338,7 +338,7 @@ color: var(--navy-blue);
   width: 216px;
   height: 160px;
   max-width: 216px;  
-  margin: 0 auto 52px;
+  margin: 72px auto;
   align-content: center;
   padding: 72px 0px;
   /* align-items: center; */
@@ -362,7 +362,7 @@ color: var(--navy-blue);
   min-width: 169px;
   height: 56px;
   border: none;
-  margin: 0 auto;
+  margin: 72px auto;
   display: block;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1189,7 +1189,7 @@ textarea:focus {
 
 /* -------------- Tablet ----------- */
 
-/* 
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
@@ -1371,7 +1371,7 @@ textarea:focus {
   }
 
 }
- */
+
 
 @media screen and (min-width: 768px) and (max-width: 1439px) {
  .section-two .container{
