--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body {
   background-color: #ffffff;
   font-size: 16px;
   line-height: 24px;
-  width: 320px;
+  
 }
 
 /* Стилі для обнулення відступів у елементів */
@@ -291,9 +291,10 @@ color: var(--navy-blue);
 
 .section-oen {
   /* max-width: 1440px; */
-  
+  padding: 72px 0px;
   height: 432px;
   background: #2e2f42;
+
  
   /* padding: 188px 0; */
   background-image: linear-gradient(
@@ -335,12 +336,10 @@ color: var(--navy-blue);
   line-height: 1.07; */
   letter-spacing: 0.02em;
   color: #fff;
-  width: 216px;
-  height: 160px;
   max-width: 216px;  
-  margin: 72px auto;
+  margin: 0 auto;
   align-content: center;
-  padding: 72px 0px;
+  
   /* align-items: center; */
     /* width: 496px;
   height: 120px;
@@ -355,14 +354,12 @@ color: var(--navy-blue);
   letter-spacing: 0.04em;
   color: #fff;
   background: #4d5ae5;
-  padding: 16px, 32px, 16px, 32px;
+  padding: 16px 32px 16px 32px;
   border-radius: 4px;
-
-
   min-width: 169px;
   height: 56px;
   border: none;
-  margin: 72px auto;
+  margin: 72px auto 0;
   display: block;
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -672,7 +669,7 @@ color: var(--navy-blue);
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
   padding: 32px 16px;
-  width: 360px;
+  /* width: 360px; */
   height: 120px;
 }
 
@@ -709,8 +706,8 @@ color: var(--navy-blue);
 }
 
 .section-four-img {
-  width: 360px;
-  height: 300px;
+  width: 288px;
+  height: 280px;
   display: block;
 }
 
@@ -1235,14 +1232,15 @@ textarea:focus {
 
   body {
     
-    width: 768px;
+    
   }
 
   
   .section-oen {
     width: 768px;
     height: 436px;
-    max-width: 768px; 
+    max-width: 768px;
+    padding: 112px 0; 
     background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -1271,17 +1269,15 @@ textarea:focus {
     font-weight: bold;
     font-size: 56px;
     line-height: 1.07; 
-    align-items: center; 
-    width: 496px;
-    height: 120px;
+    align-items: center;     
     max-width: 496px;
-    padding: 112px 0 36px 0; 
+     
     
         
   }
 
   .butt {
-    margin-top: 156px;
+    margin: 72px auto 0;
   }
 
 
@@ -1303,8 +1299,8 @@ textarea:focus {
    
 
    .section-three-team {
-    width: 768px;
-    height: 1224px;
+    /* width: 768px;
+    height: 1224px; */
     margin: 0 auto;
     
    }
@@ -1327,6 +1323,13 @@ textarea:focus {
     width: calc((100% - 24px) / 2);
 
    }
+
+   .section-four-img {
+    width: 356px;
+    height: 300px;
+    
+  }
+   
   
   
 
@@ -1359,6 +1362,14 @@ textarea:focus {
     flex-wrap:nowrap;
     flex-direction:row;
 
+  }
+  .footer-icon-block {
+    margin: 0 25px;
+  }
+
+
+  .footer-form-bth {
+    margin-left: 25px;
   }
 
   .logo-block {
@@ -1440,7 +1451,7 @@ textarea:focus {
   
   .body {
     
-    width: 1440px;
+    
   }
 
 
@@ -1454,7 +1465,8 @@ textarea:focus {
   .section-oen {
     width: 1440px;
     height: 600px;
-    max-width: 1440px; 
+    max-width: 1440px;
+    padding: 188px 0; 
     background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -1476,23 +1488,21 @@ textarea:focus {
   }
     
   .page-title {  
-    padding: 188px 0 0;
+    
     display: block;
     font-family: 'Roboto' sans-serif;
     text-align: center;
     font-weight: bold;
     font-size: 56px;
     line-height: 1.07; 
-    align-items: center; 
-    width: 496px;
-    height: 120px;
+    align-items: center;     
     max-width: 496px;
     margin: 0 auto 52px;
     
   }
 
   .butt {
-    margin-top: 168px;
+    
   }
   
   
@@ -1517,10 +1527,10 @@ textarea:focus {
 
    
    .section-three-team {
-    width: 1440px;
+    /* width: 1440px; */
     padding-top: 120px;
     padding-bottom: 120px; 
-    height: 732px;
+    /* height: 732px; */
     margin: 0 auto;
   }
    .team {
@@ -1543,13 +1553,23 @@ textarea:focus {
 
    }
    .section-four-portfolio {
-    width: 1440px;
+    /* width: 1440px; */
     margin: 0 auto;
     padding-top: 120px;
     padding-bottom: 120px;
      
     
   }
+  .section-four-img {
+    width: 360px;
+    height: 300px;
+    display: block;
+  }
+
+  .portfolio-specialization {
+    width: 360px;
+  }
+
 
 
 
